; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_sanitytest.c_test_sanity_unsigned_conversion.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_sanitytest.c_test_sanity_unsigned_conversion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INT_MAX = common dso_local global i64 0, align 8
@INT_MIN = common dso_local global i32 0, align 4
@LONG_MAX = common dso_local global i64 0, align 8
@LONG_MIN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @test_sanity_unsigned_conversion to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_sanity_unsigned_conversion() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @INT_MAX, align 8
  %3 = trunc i64 %2 to i32
  %4 = add i32 %3, 1
  %5 = load i32, i32* @INT_MIN, align 4
  %6 = call i32 @TEST_int_eq(i32 %4, i32 %5)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %14

8:                                                ; preds = %0
  %9 = load i64, i64* @LONG_MAX, align 8
  %10 = add i64 %9, 1
  %11 = load i32, i32* @LONG_MIN, align 4
  %12 = call i32 @TEST_long_eq(i64 %10, i32 %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %8, %0
  store i32 0, i32* %1, align 4
  br label %16

15:                                               ; preds = %8
  store i32 1, i32* %1, align 4
  br label %16

16:                                               ; preds = %15, %14
  %17 = load i32, i32* %1, align 4
  ret i32 %17
}

declare dso_local i32 @TEST_int_eq(i32, i32) #1

declare dso_local i32 @TEST_long_eq(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
